boulder/boulder/tests/compile_fail/function/ret_ty/variable_semi.bo
# Mismatched types
# expected `u32`
# found `Empty`
fn variable_semi(a: u32) -> u32 {
    a;
}